samples/_failures_safe/1761192339_1ffaa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1f9a3bc.c: In function ‘main’:
./samples/SAFE/__tmp_d1f9a3bc.c:158:9: error: expected declaration or statement at end of input
  158 |         if (choice == 1) {
      |         ^~
./samples/SAFE/__tmp_d1f9a3bc.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1f9a3bc.c:158:9: error: expected declaration or statement at end of input
